--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@emotion/native": "^11.10.0",
+    "@emotion/react": "^11.10.5",
     "@react-navigation/native": "^6.0.13",
     "@reduxjs/toolkit": "^1.9.0",
     "react": "18.1.0",
