--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/native": "^11.10.0",
     "@emotion/react": "^11.10.5",
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-navigation/native": "^6.0.13",
     "@reduxjs/toolkit": "^1.9.0",
     "react": "18.1.0",
