--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/native": "^11.10.0",
     "@emotion/react": "^11.10.5",
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.9.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
@@ -32,6 +34,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
