--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.9.0",
+    "i18next": "^22.0.6",
+    "intl-pluralrules": "^1.3.1",
     "react": "18.1.0",
+    "react-i18next": "^12.0.0",
     "react-native": "0.70.6",
     "react-native-fast-image": "^8.6.3",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
@@ -40,6 +44,7 @@
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "eslint-plugin-i18next": "^6.0.0-2",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
     "react-native-flipper": "^0.174.0",
