--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,18 @@
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
     /* Completeness */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
+
+    "baseUrl": "src",
+    "paths": {
+      "$src/*": ["./", "./*"],
+      "$features/*": ["./features", "./features/*"],
+      "$i18n/*": ["./i18n", "./i18n/*"],
+      "$kit/*": ["./kit", "./kit/*"],
+      "$navigation/*": ["./navigation", "./navigation/*"],
+      "$services/*": ["./services", "./services/*"],
+      "$store/*": ["./store", "./store/*"],
+      "$theme/*": ["./theme", "./theme/*"]
+    }
   }
 }
