--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
     "@emotion/native": "^11.10.0",
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@reduxjs/toolkit": "^1.9.0",
+    "eslint-plugin-import": "^2.26.0",
     "i18next": "^22.0.6",
     "intl-pluralrules": "^1.3.1",
     "react": "18.1.0",
@@ -46,6 +47,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-i18next": "^6.0.0-2",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
     "react-native-flipper": "^0.174.0",
